--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
 		<meta name="apple-mobile-web-app-status-bar-style" content="black"/>
     <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width"/>
     <title>Chart Test</title>
-  </head>
+  <link rel="shortcut icon" href="favicon-32x32.png"><link href="vendor~main.css" rel="stylesheet"><link href="main.css" rel="stylesheet"></head>
   <body>
-  <script type="text/javascript" src="bundle.js"></script></body>
+  <script type="text/javascript" src="vendor~main.js"></script><script type="text/javascript" src="bundle.js"></script></body>
 </html>
